@@ -71,7 +71,6 @@
     <maxMergeDocs>2147483647</maxMergeDocs>
     <maxFieldLength>10000</maxFieldLength>
     <writeLockTimeout>1000</writeLockTimeout>
-    <commitLockTimeout>10000</commitLockTimeout>
 
     <!--
      Expert:
@@ -93,7 +92,6 @@
     <mergeScheduler class="org.apache.lucene.index.ConcurrentMergeScheduler"/>
     <!-- these are global... can't currently override per index -->
     <writeLockTimeout>1000</writeLockTimeout>
-    <commitLockTimeout>10000</commitLockTimeout>
 
     <lockType>single</lockType>
   </indexDefaults>
