@@ -130,7 +130,6 @@
 
     <maxFieldLength>10000</maxFieldLength>
     <writeLockTimeout>1000</writeLockTimeout>
-    <commitLockTimeout>10000</commitLockTimeout>
 
     <!-- Expert: Merge Policy 
 
